tests/pass/test-func3.mc
void printem(int a, int b, int c, int d)
{
  printf("%d\n", a);
  printf("%d\n", b);
  printf("%d\n", c);
  printf("%d\n", d);
}

int main()
{
  printem(42,17,192,8);
  return 0;
}
